fixed sizing on mobile for language skills

--- a/portfolio/Views/global.css
+++ b/portfolio/Views/global.css
@@ -1,3 +1,17 @@
 a:link {
   text-decoration: none;
 }
+
+h1 {
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+body {
+}
