--- a/portfolio/Views/main-section.css
+++ b/portfolio/Views/main-section.css
@@ -1,13 +1,10 @@
-body {
+#section-main-page {
   height: 100vh;
+  width: 100vw;
+  text-align: center;
   background-image: url("../imgs/macbook-corner.jpg");
   background-size: cover;
   background-position: top;
-}
-
-#section-main-page {
-  height: 100vh;
-  text-align: center;
 }
 
 em {
