--- a/portfolio/Views/portfolio-section.css
+++ b/portfolio/Views/portfolio-section.css
@@ -1,8 +1,3 @@
-#section-portfolio > h1 {
-  text-align: center;
-  font-size: 3em;
-}
-
 #section-portfolio .card {
   margin: 1em;
   color: white;
