--- a/portfolio/Views/timeline-section.css
+++ b/portfolio/Views/timeline-section.css
@@ -1,11 +1,4 @@
-#section-timeline h1 {
-  font-size: 3rem;
-  text-align: center;
-  margin-bottom: 4rem;
-}
-
 /* TODO: Need to add transitions */
-
 .timeline-item {
     margin: 1.5rem 0;
 }
